kubernetes/05-mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: chat-app
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
