kubernetes/09-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: chat-app
spec:
  type: NodePort
  selector:
    app: chatapp-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
